--- a/EquipmentRepairServiceCenter.ASP/Views/Faults/Update.cshtml
+++ b/EquipmentRepairServiceCenter.ASP/Views/Faults/Update.cshtml
@@ -4,6 +4,21 @@
     ViewData["Title"] = "Faults";
 }
 
+<div id="dropdown" class="dropdown">
+    <button class="dropbtn">Menu</button>
+    <div class="dropdown-content">
+        <a href="/Clients/GetAll">Clients</a>
+        <a href="/Employees/GetAll">Employees</a>
+        <a href="/Faults/GetAll">Faults</a>
+        <a href="/Orders/GetAll">Orders</a>
+        <a href="/RepairingModels/GetAll">Repairing Models</a>
+        <a href="/ServicedStores/GetAll">Serviced Stores</a>
+        <a href="/SpareParts/GetAll">Spare Parts</a>
+        <a href="/UsedSpareParts/GetAll">Used Spare Parts</a>
+        <a href="/Users/GetAll">Users</a>
+    </div>
+</div>
+
 <div style="margin-bottom: 50px;">
     <h3>Fault Update</h3>
 
@@ -26,7 +41,7 @@
         <div class="field-container">
             <label asp-for="Price">Price (old price: @Model.Price)</label>
             <div>
-                <input class="input-props" asp-for="Price" type="number"/>
+                <input class="input-props" asp-for="Price"/>
                 <span class="error-mes-span" style="color: red; font-size: 90%;" asp-validation-for="Price"></span>
             </div>
         </div>
