--- a/EquipmentRepairServiceCenter.ASP/Views/RepairingModels/GetById.cshtml
+++ b/EquipmentRepairServiceCenter.ASP/Views/RepairingModels/GetById.cshtml
@@ -4,13 +4,27 @@
     ViewData["Title"] = "Repairing Model";
 }
 
+<div id="dropdown" class="dropdown">
+    <button class="dropbtn">Menu</button>
+    <div class="dropdown-content">
+        <a href="/Clients/GetAll">Clients</a>
+        <a href="/Employees/GetAll">Employees</a>
+        <a href="/Faults/GetAll">Faults</a>
+        <a href="/Orders/GetAll">Orders</a>
+        <a href="/RepairingModels/GetAll">Repairing Models</a>
+        <a href="/ServicedStores/GetAll">Serviced Stores</a>
+        <a href="/SpareParts/GetAll">Spare Parts</a>
+        <a href="/UsedSpareParts/GetAll">Used Spare Parts</a>
+        <a href="/Users/GetAll">Users</a>
+    </div>
+</div>
+
 <div>
     <h3 class="h3-above-table">Repairing Model</h3>
 
     <table class="table">
         <thead>
             <tr>
-                <th>Id</th>
                 <th>Name</th>
                 <th>Manufacturer</th>
                 <th>Specifications</th>
@@ -20,7 +34,6 @@
         </thead>
         <tbody>
             <tr>
-                <td>@Model.Id</td>
                 <td>@Model.Name</td>
                 <td>@Model.Manufacturer</td>
                 <td>@Model.Specifications</td>
