--- a/EquipmentRepairServiceCenter.ASP/Views/Shared/_Layout.cshtml
+++ b/EquipmentRepairServiceCenter.ASP/Views/Shared/_Layout.cshtml
@@ -40,6 +40,7 @@
         else {
             signOutBtn.style.display = 'block';
             backBtn.style.right = '160px';
+            dd.style.display = 'block';
         }
     </script>
 </body>
