--- a/EquipmentRepairServiceCenter.ASP/Views/Faults/InfoPage.cshtml
+++ b/EquipmentRepairServiceCenter.ASP/Views/Faults/InfoPage.cshtml
@@ -1,2 +1,17 @@
 ﻿<h2 style="text-align: center; margin-top: 100px;">Operation successful!</h2>
 <a class="back-btn" href="/Home/AdminsPage">Back</a>
+
+<div id="dropdown" class="dropdown">
+    <button class="dropbtn">Menu</button>
+    <div class="dropdown-content">
+        <a href="/Clients/GetAll">Clients</a>
+        <a href="/Employees/GetAll">Employees</a>
+        <a href="/Faults/GetAll">Faults</a>
+        <a href="/Orders/GetAll">Orders</a>
+        <a href="/RepairingModels/GetAll">Repairing Models</a>
+        <a href="/ServicedStores/GetAll">Serviced Stores</a>
+        <a href="/SpareParts/GetAll">Spare Parts</a>
+        <a href="/UsedSpareParts/GetAll">Used Spare Parts</a>
+        <a href="/Users/GetAll">Users</a>
+    </div>
+</div>
