--- a/EquipmentRepairServiceCenter.ASP/Views/Orders/GetAll.cshtml
+++ b/EquipmentRepairServiceCenter.ASP/Views/Orders/GetAll.cshtml
@@ -21,6 +21,21 @@
     string employee = ViewData["o_employeeFio"] is null ? "Employee" : ViewData["o_employeeFio"].ToString();
 }
 
+<div id="dropdown" class="dropdown">
+    <button class="dropbtn">Menu</button>
+    <div class="dropdown-content">
+        <a href="/Clients/GetAll">Clients</a>
+        <a href="/Employees/GetAll">Employees</a>
+        <a href="/Faults/GetAll">Faults</a>
+        <a href="/Orders/GetAll">Orders</a>
+        <a href="/RepairingModels/GetAll">Repairing Models</a>
+        <a href="/ServicedStores/GetAll">Serviced Stores</a>
+        <a href="/SpareParts/GetAll">Spare Parts</a>
+        <a href="/UsedSpareParts/GetAll">Used Spare Parts</a>
+        <a href="/Users/GetAll">Users</a>
+    </div>
+</div>
+
 <div style="padding-bottom: 30px;">
     <h3 class="h3-above-table">Orders</h3>
 
@@ -45,7 +60,6 @@
         <thead>
             <tr>
                 <th>Number</th>
-                <th>Id</th>
                 <th>Order Date</th>
                 <th>Equipment Serial Number</th>
                 <th>Equipment Return Date</th>
@@ -64,7 +78,6 @@
             {
                 <tr>
                     <td>@index</td>
-                    <td>@order.Id</td>
                     <td>@order.OrderDate</td>
                     <td>@order.EquipmentSerialNumber</td>
                     <td>@order.EquipmentReturnDate</td>
