--- a/EquipmentRepairServiceCenter.ASP/Views/RepairingModels/Create.cshtml
+++ b/EquipmentRepairServiceCenter.ASP/Views/RepairingModels/Create.cshtml
@@ -10,6 +10,21 @@
         .Select(i => new SelectListItem() { Text = i, Value = i });
 }
 
+<div id="dropdown" class="dropdown">
+    <button class="dropbtn">Menu</button>
+    <div class="dropdown-content">
+        <a href="/Clients/GetAll">Clients</a>
+        <a href="/Employees/GetAll">Employees</a>
+        <a href="/Faults/GetAll">Faults</a>
+        <a href="/Orders/GetAll">Orders</a>
+        <a href="/RepairingModels/GetAll">Repairing Models</a>
+        <a href="/ServicedStores/GetAll">Serviced Stores</a>
+        <a href="/SpareParts/GetAll">Spare Parts</a>
+        <a href="/UsedSpareParts/GetAll">Used Spare Parts</a>
+        <a href="/Users/GetAll">Users</a>
+    </div>
+</div>
+
 <div style="margin-bottom: 50px;">
     <h3>Repairing Model Creation</h3>
 
