--- a/EquipmentRepairServiceCenter.ASP/Views/Orders/GetAll.cshtml
+++ b/EquipmentRepairServiceCenter.ASP/Views/Orders/GetAll.cshtml
@@ -54,7 +54,7 @@
         <button style="margin-top: 10px" class="action-btn" type="submit">Search</button>
     </form>  
 
-    <a href="/Orders/Create" class="a-create">Create</a>
+    <a href="/Orders/CreateForAdmin" class="a-create">Create</a>
 
     <table class="table">
         <thead>
