--- a/EquipmentRepairServiceCenter.ASP/Views/Faults/GetAll.cshtml
+++ b/EquipmentRepairServiceCenter.ASP/Views/Faults/GetAll.cshtml
@@ -38,10 +38,10 @@
         <thead>
             <tr>
                 <th>Number</th>
-                <th>Name</th>
-                <th>Repairing Model</th>
+                <th><a href="/Faults/Get?sortedFieldNumber=1">Name 🠕🠗</a></th>
+                <th><a href="/Faults/Get?sortedFieldNumber=2">Repairing Model 🠕🠗</a></th>
                 <th>Repairing Methods</th>
-                <th>Price</th>
+                <th><a href="/Faults/Get?sortedFieldNumber=3">Price 🠕🠗</a></th>
                 <th>Update</th>
                 <th>Delete</th>
             </tr>
