--- a/EquipmentRepairServiceCenter.ASP/Views/RepairingModels/GetAll.cshtml
+++ b/EquipmentRepairServiceCenter.ASP/Views/RepairingModels/GetAll.cshtml
@@ -30,8 +30,8 @@
         <thead>
             <tr>
                 <th>Number</th>
-                <th>Name</th>
-                <th>Manufacturer</th>
+                <th><a href="/RepairingModels/Get?sortedFieldNumber=1">Name 🠕🠗</a></th>
+                <th><a href="/RepairingModels/Get?sortedFieldNumber=2">Manufacturer 🠕🠗</a></th>
                 <th>Specifications</th>
                 <th>ParticularQualities</th>
                 <th>Photo</th>
