--- a/EquipmentRepairServiceCenter.ASP/Views/ServicedStores/GetAll.cshtml
+++ b/EquipmentRepairServiceCenter.ASP/Views/ServicedStores/GetAll.cshtml
@@ -30,8 +30,8 @@
         <thead>
             <tr>
                 <th>Number</th>
-                <th>Name</th>
-                <th>Address</th>
+                <th><a href="/ServicedStores/Get?sortedFieldNumber=1">Name 🠕🠗</a></th>
+                <th><a href="/ServicedStores/Get?sortedFieldNumber=2">Address 🠕🠗</a></th>
                 <th>Phone Number</th>
                 <th>Update</th>
                 <th>Delete</th>
