--- a/EquipmentRepairServiceCenter.ASP/Views/SpareParts/GetAll.cshtml
+++ b/EquipmentRepairServiceCenter.ASP/Views/SpareParts/GetAll.cshtml
@@ -30,10 +30,10 @@
         <thead>
             <tr>
                 <th>Number</th>
-                <th>Name</th>
+                <th><a href="/SpareParts/Get?sortedFieldNumber=1">Name 🠕🠗</a></th>
                 <th>Functions</th>
-                <th>Price</th>
-                <th>Equipment Type</th>
+                <th><a href="/SpareParts/Get?sortedFieldNumber=2">Price 🠕🠗</a></th>
+                <th><a href="/SpareParts/Get?sortedFieldNumber=3">Equipment Type 🠕🠗</a></th>
                 <th>Update</th>
                 <th>Delete</th>
             </tr>
