--- a/EquipmentRepairServiceCenter.ASP/Views/UsedSpareParts/GetAll.cshtml
+++ b/EquipmentRepairServiceCenter.ASP/Views/UsedSpareParts/GetAll.cshtml
@@ -30,9 +30,9 @@
         <thead>
             <tr>
                 <th>Number</th>
-                <th>Name of spare part</th>
+                <th><a href="/UsedSpareParts/Get?sortedFieldNumber=1">Name of spare part 🠕🠗</a></th>
                 <th>Spare part functions</th>
-                <th>Name of fault</th>
+                <th><a href="/UsedSpareParts/Get?sortedFieldNumber=2">Name of fault 🠕🠗</a></th>
                 <th>Price</th>
                 <th>Delete</th>
             </tr>
