--- a/EquipmentRepairServiceCenter.ASP/Views/Users/GetAll.cshtml
+++ b/EquipmentRepairServiceCenter.ASP/Views/Users/GetAll.cshtml
@@ -30,8 +30,8 @@
         <thead>
             <tr>
                 <th>Number</th>
-                <th>UserName</th>
-                <th>Email</th>
+                <th><a href="/Users/Get?sortedFieldNumber=1">UserName 🠕🠗</a></th>
+                <th><a href="/Users/Get?sortedFieldNumber=2">Email 🠕🠗</a></th>
                 <th>Delete</th>
             </tr>
         </thead>
