implemented clearing cookies

--- a/EquipmentRepairServiceCenter.ASP/Views/Faults/GetAll.cshtml
+++ b/EquipmentRepairServiceCenter.ASP/Views/Faults/GetAll.cshtml
@@ -30,6 +30,7 @@
         <input class="input-props" type="text" name="f_repairingMethods" placeholder="Part of srring of repairing methods" value="@ViewData["f_repairingMethods"]" />
         <button style="margin-top: 10px" class="action-btn" type="submit">Search</button>
         <a class="a_addit" href="/Orders/GetFaultsByClient">Search by clients</a>
+        <a href="/Faults/ClearCookie" class="a-create">Clear</a>
     </form>  
 
     <a href="/Faults/Create" class="a-create">Create</a>
