--- a/EquipmentRepairServiceCenter.ASP/Views/Clients/Delete.cshtml
+++ b/EquipmentRepairServiceCenter.ASP/Views/Clients/Delete.cshtml
@@ -1,5 +1,5 @@
 ﻿<form class="getting-form" asp-action="Delete" method="post">
-    <h3>Are you sure that you want to remove client with id = <b>@ViewData["Message"]</b> ?</h3>
+    <h3>Are you sure that you want to remove client <b>@ViewData["Message"]</b> ?</h3>
     <button class="action-btn" type="submit">Confirm</button>
 </form>  
 
