--- a/EquipmentRepairServiceCenter.ASP/Views/Employees/GetAll.cshtml
+++ b/EquipmentRepairServiceCenter.ASP/Views/Employees/GetAll.cshtml
@@ -69,5 +69,5 @@
     </table>
 
     <a href="/Employees/GetMore" class="a-create">Show 20 more entries</a>
-    <a class="back-btn" href="/Home/AdminsPage">Back</a>
+    <a class="back-btn" href="/Home/Index">Back</a>
 </div>
