--- a/EquipmentRepairServiceCenter.ASP/Views/Faults/GetAll.cshtml
+++ b/EquipmentRepairServiceCenter.ASP/Views/Faults/GetAll.cshtml
@@ -66,5 +66,5 @@
     </table>
 
     <a href="/Faults/GetMore" class="a-create">Show 20 more entries</a>
-    <a class="back-btn" href="/Home/AdminsPage">Back</a>
+    <a class="back-btn" href="/Home/Index">Back</a>
 </div>
