--- a/EquipmentRepairServiceCenter.ASP/Views/SpareParts/GetAll.cshtml
+++ b/EquipmentRepairServiceCenter.ASP/Views/SpareParts/GetAll.cshtml
@@ -57,5 +57,5 @@
     </table>
 
     <a href="/SpareParts/GetMore" class="a-create">Show 20 more entries</a>
-    <a class="back-btn" href="/Home/AdminsPage">Back</a>
+    <a class="back-btn" href="/Home/Index">Back</a>
 </div>
