--- a/EquipmentRepairServiceCenter.ASP/Views/Home/EmployeesPage.cshtml
+++ b/EquipmentRepairServiceCenter.ASP/Views/Home/EmployeesPage.cshtml
@@ -15,7 +15,9 @@
     </div>
 
     <ul class="main-menu">
-        <li><a href="/Orders/Client">Order</a></li>
-        <li><a href="/Orders/GetForClient">View My Orders</a></li>
+        <li><a href="/Orders/GetForEmployee">Orders</a></li>
+        <li><a href="/RepairingModels/GetAll">Repairing Models</a></li>
+        <li><a href="/Faults/GetAll">Faults</a></li>
+        <li><a href="/SpareParts/GetAll">Spare Parts</a></li>
     </ul>
 </div>
