--- a/EquipmentRepairServiceCenter.ASP/Views/RepairingModels/GetAll.cshtml
+++ b/EquipmentRepairServiceCenter.ASP/Views/RepairingModels/GetAll.cshtml
@@ -59,5 +59,5 @@
     </table>
 
     <a href="/RepairingModels/GetMore" class="a-create">Show 20 more entries</a>
-    <a class="back-btn" href="/Home/AdminsPage">Back</a>
+    <a class="back-btn" href="/Home/Index">Back</a>
 </div>
