--- a/EquipmentRepairServiceCenter.ASP/Views/SpareParts/InfoPage.cshtml
+++ b/EquipmentRepairServiceCenter.ASP/Views/SpareParts/InfoPage.cshtml
@@ -1,5 +1,5 @@
 ﻿<h2 style="text-align: center; margin-top: 100px;">Operation successful!</h2>
-<a class="back-btn" href="/Home/AdminsPage">Back</a>
+<a class="back-btn" href="/Home/Index">Back</a>
 
 <div id="dropdown" class="dropdown">
     <button class="dropbtn">Menu</button>
