--- a/EquipmentRepairServiceCenter.ASP/Views/UsedSpareParts/GetAll.cshtml
+++ b/EquipmentRepairServiceCenter.ASP/Views/UsedSpareParts/GetAll.cshtml
@@ -55,5 +55,5 @@
     </table>
 
     <a href="/UsedSpareParts/GetMore" class="a-create">Show 20 more entries</a>
-    <a class="back-btn" href="/UsedSpareParts/GetAll">Back</a>
+    <a class="back-btn" href="/Home/Index">Back</a>
 </div>
