--- a/EquipmentRepairServiceCenter.ASP/Views/Users/GetAll.cshtml
+++ b/EquipmentRepairServiceCenter.ASP/Views/Users/GetAll.cshtml
@@ -51,5 +51,5 @@
     </table>
 
     <a href="/Users/GetMore" class="a-create">Show 20 more entries</a>
-    <a class="back-btn" href="/Home/AdminsPage">Back</a>
+    <a class="back-btn" href="/Home/Index">Back</a>
 </div>
