--- a/EquipmentRepairServiceCenter.ASP/Views/Employees/GetAll.cshtml
+++ b/EquipmentRepairServiceCenter.ASP/Views/Employees/GetAll.cshtml
@@ -29,6 +29,9 @@
         <input class="input-props" type="text" name="e_surname" placeholder="Surname or part of surname" value="@ViewData["e_surname"]" />
         <input class="input-props" type="text" name="e_name" placeholder="Name or part of name" value="@ViewData["e_name"]" />
         <input class="input-props" type="text" name="e_middleName" placeholder="Middle name or part of middle name" value="@ViewData["e_middleName"]" />
+
+        <br />
+        <label>Work experience</label>
         <input class="input-props" type="number" name="e_workExperience" placeholder="Work experience (years)" value="@workExp"/>
         <button style="margin-top: 10px" class="action-btn" type="submit">Search</button>
         <a href="/Employees/ClearCookie" class="a-create">Clear</a>
