--- a/EquipmentRepairServiceCenter.ASP/Views/Home/Index.cshtml
+++ b/EquipmentRepairServiceCenter.ASP/Views/Home/Index.cshtml
@@ -15,7 +15,7 @@
     </div>
 
     <ul class="main-menu">
-        <li><a href="/Orders/Client">Order</a></li>
+        <li><a href="/Orders/Create">Order</a></li>
         <li><a href="/Orders/GetForClient">View My Orders</a></li>
     </ul>
 </div>
