--- a/EquipmentRepairServiceCenter.ASP/Views/Orders/UpdateForAdmin.cshtml
+++ b/EquipmentRepairServiceCenter.ASP/Views/Orders/UpdateForAdmin.cshtml
@@ -58,5 +58,5 @@
         </div>
     </form>
 
-    <a class="back-btn" href="/Home/Index">Back</a>
+    <a class="back-btn" href="/Orders/GetAll">Back</a>
 </div>
